--- a/css/main.css
+++ b/css/main.css
@@ -8,11 +8,10 @@
     right: 0;
     width: 100%;
     height: 100%;
-    background: black;
+    background: rgb(0, 0, 0);
     transition: all 2s;
     opacity: 1;
     visibility: visible;
-
 }
 
 .flash {
